# vetta-devices

./: -gitmodules  .gitmodules  README.md  vetta-rtos-sdk.patch
vetta-esp8266/: .gitignore  CMakeLists.txt  Makefile  README.md  espflash.py  espvetta-partitions.csv  partition-table.csv  sdkconfig
vetta-esp8266/components/dynamic-bits/: CMakeLists.txt  bitconv.c  dbits.c  deque.c  dpacket.c  dtypes.c  sdeque.c
vetta-esp8266/components/dynamic-bits/include/: dbits.h  dpacket.h  dtypes.h
vetta-esp8266/components/dynamic-bits/include/dbits/: bitconv.h  deque.h  dtypes.h  sdeque.h
vetta-esp8266/components/network/: CMakeLists.txt  ca.pem  component.mk  discovery.c  lamp.key  lamp.pem  listener.c  packets.c  wifi_manager.c  wifi_provision.c
vetta-esp8266/components/network/include/: discovery.h  listener.h  packets.h  wifi_manager.h  wifi_provision.h
vetta-esp8266/components/sensors/: CMakeLists.txt  button.c  led.c  pu_button.c  push_button.c  touch.c  touch_led.c
vetta-esp8266/components/sensors/include/: button.h  led.h  pu_button.h  push_button.h  touch.h  touch_led.h
vetta-esp8266/components/storage/: CMakeLists.txt  spiffs_storage.c  storage.c
vetta-esp8266/components/storage/include/: spiffs_storage.h  storage.h
vetta-esp8266/main/: CMakeLists.txt  espconfig_overwrite.h  vetta_main.c
vetta-esp8266/main/include/: utils.h
