idf_component_register(SRCS "button.c" "led.c" "touch.c"
                       INCLUDE_DIRS "include"
                       PRIVATE_HEADER   "freertos/FreeRTOS.h"
                                        "freertos/FreeRTOSConfig.h"
                                        "freertos/task.h"
                                        "esp8266/gpio_register.h"
                                        "esp8266/pin_mux_register.h"
                                        "driver/pwm.h"
                                        "driver/gpio.h"
                                        "driver/adc.h"
                                        "esp_err.h")
